# pepepow-android-wallet

./: .gitignore  BUILD_FIX_NOTES.md  CHANGELOG.md  README.md  build.gradle  catch_changes.patch  pom.xml  settings.gradle
bls/: CMakeLists.txt  pom.xml
common/: build.gradle
ui-redesign/: build.gradle
ui-redesign/src/main/res/values/: attrs.xml
uphold-integration/: build.gradle
wallet/: AndroidManifest.xml  build.gradle
wallet/beta/res/xml/: shortcuts.xml
wallet/cpp/dashj-bls/: CMakeLists.txt  bls-signatures-src.cmake  bls-signatures.cmake  dashj-bls-signature-wrapper.cpp  relic_stubs.c
wallet/cpp/dashj-bls/bls-signatures/contrib/relic/src/md/: blake2.h
wallet/res/values/: attrs_pepepow.xml  strings.xml  values.xml
wallet/res/xml/: shortcuts.xml
wallet/src/com/tbuonomo/viewpagerdotsindicator/: DotsIndicator.java
wallet/src/de/schildbach/wallet/: Constants.java  WalletApplication.java  WalletBalanceWidgetProvider.java
wallet/src/de/schildbach/wallet/data/: DynamicFeeLoader.java  PaymentIntent.java
wallet/src/de/schildbach/wallet/offline/: AcceptBluetoothService.java  DirectPaymentTask.java
wallet/src/de/schildbach/wallet/service/: BlockchainServiceImpl.java  InactivityNotificationService.java  UpgradeWalletService.java
wallet/src/de/schildbach/wallet/ui/: AboutActivity.kt  AbstractPINDialogFragment.java  AbstractWalletActivity.java  AddressBookActivity.java  AdvancedSecurityActivity.kt  AppUpgradeActivity.kt  ArchiveBackupDialogFragment.java  BackupWalletDialogFragment.java  BackupWalletToSeedDialogFragment.java  BaseBottomSheetDialogFragment.kt  BaseMenuActivity.kt  BlockInfoActivity.kt  BlockListAdapter.java  BlockListFragment.java  CheckPinDialog.kt  CheckPinDuringUpgradeDialog.kt  EditAddressBookEntryFragment.java  EnableFingerprintDialog.java  EnterAmountFragment.kt  (+63 more)
wallet/src/org/bitcoinj/core/: CoinDefinition.java
wallet/testNet3/res/xml/: shortcuts.xml
(+31 files in other folders)
